[gd_scene load_steps=7 format=2]

[ext_resource path="res://SCENES/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://SCENES/ObjectiveWindow/ObjectiveWindow.tscn" type="PackedScene" id=2]
[ext_resource path="res://ASSETS/Wenrexa/SelectionBTN/Icon02.png" type="Texture" id=3]
[ext_resource path="res://THEMES/MainTheme.tres" type="Theme" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://ASSETS/FontKaph/Kaph-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[node name="HUD" type="Control"]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="PlaceHolderContainer" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GalacticCenterPopupButton" type="TextureButton" parent="CanvasLayer"]
visible = false
anchor_left = 0.015
anchor_top = 0.0266667
anchor_right = 0.039375
anchor_bottom = 0.0422222
margin_left = 5.0
margin_top = 7.99997
margin_right = 94.0
margin_bottom = 122.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="WindowDialog" type="WindowDialog" parent="CanvasLayer/GalacticCenterPopupButton"]
margin_left = 44.0
margin_top = 200.0
margin_right = 585.0
margin_bottom = 480.0
mouse_filter = 2
theme = ExtResource( 4 )

[node name="Label" type="Label" parent="CanvasLayer/GalacticCenterPopupButton/WindowDialog"]
anchor_right = 1.0
margin_top = 8.0
margin_bottom = 36.0
text = "CENTRE GALACTIQUE"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Label2" type="Label" parent="CanvasLayer/GalacticCenterPopupButton/WindowDialog"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -195.0
custom_fonts/font = SubResource( 2 )
text = "Le centre galactique est le centre de rotation du disque de la Voie lactée, galaxie comprenant la planète Terre. Il est situé à une distance de (8 178 ± 26) parsecs, soit (26 673 ± 83) années-lumière, du Soleil dans la région lumineuse la plus étendue de la Voie lactée, dans la direction de la constellation zodiacale du Sagittaire."
align = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_left = 0.365
anchor_top = 0.928889
anchor_right = 0.635
anchor_bottom = 0.982222
margin_bottom = 0.000244141
rect_min_size = Vector2( 432, 48 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 7

[node name="ObjectiveWindow" parent="." instance=ExtResource( 2 )]

[connection signal="mouse_entered" from="CanvasLayer/Panel" to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Panel" to="." method="_on_Panel_mouse_exited"]
